remove dleted files
